coursework1/ParserGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from parsergrammar.y
-----------------------------------------------------------------------------


rule 7 is unused

terminal '\n' is unused
terminal in is unused
terminal '{' is unused
terminal '}' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Sequence                       (0)
	Sequence -> begin Exp end                          (1)
	Sequence -> map Lam Exp                            (2)
	Sequence -> if Exp then Exp else Exp fi            (3)
	Sequence -> while Exp Exp                          (4)
	Sequence -> let var '=' Exp                        (5)
	Sequence -> zipLines Lam Exp Exp                   (6)
	Sequence -> Sequence                               (7)
	Sequence -> listsArith Lam Exp                     (8)
	Exp -> length Exp                                  (9)
	Exp -> Exp ';' Exp                                 (10)
	Exp -> print Exp                                   (11)
	Exp -> reverse Exp                                 (12)
	Exp -> push int int Exp                            (13)
	Exp -> head Exp                                    (14)
	Exp -> last Exp                                    (15)
	Exp -> take Exp Exp                                (16)
	Exp -> sumLists Exp                                (17)
	Exp -> takeRepeat Exp Exp                          (18)
	Exp -> fibSequence Exp                             (19)
	Exp -> splitAt Exp Exp                             (20)
	Exp -> getStream                                   (21)
	Exp -> duplicate Exp                               (22)
	Exp -> sum Exp                                     (23)
	Exp -> Exp '++' Exp                                (24)
	Exp -> Exp '+' Exp                                 (25)
	Exp -> Exp '-' Exp                                 (26)
	Exp -> Exp '*' Exp                                 (27)
	Exp -> Exp '/' Exp                                 (28)
	Exp -> Exp '<' Exp                                 (29)
	Exp -> Exp '>' Exp                                 (30)
	Exp -> int ',' Exp                                 (31)
	Exp -> int                                         (32)
	Exp -> var                                         (33)
	Exp -> true                                        (34)
	Exp -> false                                       (35)
	Exp -> '(' Exp ')'                                 (36)
	Lam -> Exp Exp                                     (37)
	Lam -> lam '(' var ':' DataType ')' Exp            (38)
	DataType -> Bool                                   (39)
	DataType -> Int                                    (40)
	DataType -> DataType arr DataType                  (41)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Bool           { TokenTypeBool _ }
	Int            { TokenTypeInt _ }
	int            { TokenInt _ $$ }
	true           { TokenTrue _ }
	false          { TokenFalse _ }
	begin          { TokenBegin _ }
	end            { TokenEnd _ }
	getStream      { TokenGetStream _ }
	print          { TokenPrint _ }
	'\n'           { TokenEOL _ }
	let            { TokenLet _ }
	in             { TokenIn _ }
	'<'            { TokenLT _ }
	'>'            { TokenGT _ }
	'='            { TokenEq _ }
	':'            { TokenCol _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	'{'            { TokenLBrckt _ }
	'}'            { TokenRBrckt _ }
	','            { TokenComma _ }
	var            { TokenVar _ $$ }
	';'            { TokenSemiCol _ }
	if             { TokenIf _ }
	else           { TokenElse _ }
	then           { TokenThen _ }
	fi             { TokenFi _ }
	reverse        { TokenReverse _ }
	'+'            { TokenAdd _ }
	'*'            { TokenMult _ }
	'-'            { TokenSub _ }
	'/'            { TokenDiv _ }
	length         { TokenLength _ }
	lam            { TokenLambda _ }
	arr            { TokenArr _ }
	push           { TokenPush _ }
	'++'           { TokenMerge _ }
	splitAt        { TokenSplitAt _ }
	duplicate      { TokenDuplicate _ }
	head           { TokenHead _ }
	last           { TokenLast _ }
	take           { TokenTake _ }
	sum            { TokenSum _ }
	map            { TokenMap _ }
	takeRepeat     { TokenTakeRepeat _ }
	listsArith     { TokenListsArith _ }
	sumLists       { TokenSumLists _ }
	fibSequence    { TokenFibSequence _ }
	zipLines       { TokenZipLines _ }
	while          { TokenWhile _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Sequence        rules 1, 2, 3, 4, 5, 6, 7, 8
	Exp             rules 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36
	Lam             rules 37, 38
	DataType        rules 39, 40, 41

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	begin          shift, and enter state 2
	let            shift, and enter state 4
	if             shift, and enter state 5
	map            shift, and enter state 6
	listsArith     shift, and enter state 7
	zipLines       shift, and enter state 8
	while          shift, and enter state 9

	Sequence       goto state 3

State 1


	begin          shift, and enter state 2


State 2

	Sequence -> begin . Exp end                         (rule 1)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 37

State 3

	%start_parseCalc -> Sequence .                      (rule 0)
	Sequence -> Sequence .                              (rule 7)

	%eof           accept


State 4

	Sequence -> let . var '=' Exp                       (rule 5)

	var            shift, and enter state 36


State 5

	Sequence -> if . Exp then Exp else Exp fi           (rule 3)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 35

State 6

	Sequence -> map . Lam Exp                           (rule 2)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	lam            shift, and enter state 32
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 30
	Lam            goto state 34

State 7

	Sequence -> listsArith . Lam Exp                    (rule 8)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	lam            shift, and enter state 32
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 30
	Lam            goto state 33

State 8

	Sequence -> zipLines . Lam Exp Exp                  (rule 6)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	lam            shift, and enter state 32
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 30
	Lam            goto state 31

State 9

	Sequence -> while . Exp Exp                         (rule 4)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 10

State 10

	Sequence -> while Exp . Exp                         (rule 4)
	Exp -> Exp . ';' Exp                                (rule 10)
	Exp -> Exp . '++' Exp                               (rule 24)
	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '<' Exp                                (rule 29)
	Exp -> Exp . '>' Exp                                (rule 30)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'<'            shift, and enter state 39
	'>'            shift, and enter state 40
	'('            shift, and enter state 16
	var            shift, and enter state 17
	';'            shift, and enter state 41
	reverse        shift, and enter state 18
	'+'            shift, and enter state 42
	'*'            shift, and enter state 43
	'-'            shift, and enter state 44
	'/'            shift, and enter state 45
	length         shift, and enter state 19
	push           shift, and enter state 20
	'++'           shift, and enter state 46
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 69

State 11

	Exp -> int . ',' Exp                                (rule 31)
	Exp -> int .                                        (rule 32)

	int            reduce using rule 32
	true           reduce using rule 32
	false          reduce using rule 32
	end            reduce using rule 32
	getStream      reduce using rule 32
	print          reduce using rule 32
	'<'            reduce using rule 32
	'>'            reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	','            shift, and enter state 68
	var            reduce using rule 32
	';'            reduce using rule 32
	else           reduce using rule 32
	then           reduce using rule 32
	fi             reduce using rule 32
	reverse        reduce using rule 32
	'+'            reduce using rule 32
	'*'            reduce using rule 32
	'-'            reduce using rule 32
	'/'            reduce using rule 32
	length         reduce using rule 32
	push           reduce using rule 32
	'++'           reduce using rule 32
	splitAt        reduce using rule 32
	duplicate      reduce using rule 32
	head           reduce using rule 32
	last           reduce using rule 32
	take           reduce using rule 32
	sum            reduce using rule 32
	takeRepeat     reduce using rule 32
	sumLists       reduce using rule 32
	fibSequence    reduce using rule 32
	%eof           reduce using rule 32


State 12

	Exp -> true .                                       (rule 34)

	int            reduce using rule 34
	true           reduce using rule 34
	false          reduce using rule 34
	end            reduce using rule 34
	getStream      reduce using rule 34
	print          reduce using rule 34
	'<'            reduce using rule 34
	'>'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	var            reduce using rule 34
	';'            reduce using rule 34
	else           reduce using rule 34
	then           reduce using rule 34
	fi             reduce using rule 34
	reverse        reduce using rule 34
	'+'            reduce using rule 34
	'*'            reduce using rule 34
	'-'            reduce using rule 34
	'/'            reduce using rule 34
	length         reduce using rule 34
	push           reduce using rule 34
	'++'           reduce using rule 34
	splitAt        reduce using rule 34
	duplicate      reduce using rule 34
	head           reduce using rule 34
	last           reduce using rule 34
	take           reduce using rule 34
	sum            reduce using rule 34
	takeRepeat     reduce using rule 34
	sumLists       reduce using rule 34
	fibSequence    reduce using rule 34
	%eof           reduce using rule 34


State 13

	Exp -> false .                                      (rule 35)

	int            reduce using rule 35
	true           reduce using rule 35
	false          reduce using rule 35
	end            reduce using rule 35
	getStream      reduce using rule 35
	print          reduce using rule 35
	'<'            reduce using rule 35
	'>'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	var            reduce using rule 35
	';'            reduce using rule 35
	else           reduce using rule 35
	then           reduce using rule 35
	fi             reduce using rule 35
	reverse        reduce using rule 35
	'+'            reduce using rule 35
	'*'            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	length         reduce using rule 35
	push           reduce using rule 35
	'++'           reduce using rule 35
	splitAt        reduce using rule 35
	duplicate      reduce using rule 35
	head           reduce using rule 35
	last           reduce using rule 35
	take           reduce using rule 35
	sum            reduce using rule 35
	takeRepeat     reduce using rule 35
	sumLists       reduce using rule 35
	fibSequence    reduce using rule 35
	%eof           reduce using rule 35


State 14

	Exp -> getStream .                                  (rule 21)

	int            reduce using rule 21
	true           reduce using rule 21
	false          reduce using rule 21
	end            reduce using rule 21
	getStream      reduce using rule 21
	print          reduce using rule 21
	'<'            reduce using rule 21
	'>'            reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	var            reduce using rule 21
	';'            reduce using rule 21
	else           reduce using rule 21
	then           reduce using rule 21
	fi             reduce using rule 21
	reverse        reduce using rule 21
	'+'            reduce using rule 21
	'*'            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	length         reduce using rule 21
	push           reduce using rule 21
	'++'           reduce using rule 21
	splitAt        reduce using rule 21
	duplicate      reduce using rule 21
	head           reduce using rule 21
	last           reduce using rule 21
	take           reduce using rule 21
	sum            reduce using rule 21
	takeRepeat     reduce using rule 21
	sumLists       reduce using rule 21
	fibSequence    reduce using rule 21
	%eof           reduce using rule 21


State 15

	Exp -> print . Exp                                  (rule 11)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 67

State 16

	Exp -> '(' . Exp ')'                                (rule 36)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 66

State 17

	Exp -> var .                                        (rule 33)

	int            reduce using rule 33
	true           reduce using rule 33
	false          reduce using rule 33
	end            reduce using rule 33
	getStream      reduce using rule 33
	print          reduce using rule 33
	'<'            reduce using rule 33
	'>'            reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	var            reduce using rule 33
	';'            reduce using rule 33
	else           reduce using rule 33
	then           reduce using rule 33
	fi             reduce using rule 33
	reverse        reduce using rule 33
	'+'            reduce using rule 33
	'*'            reduce using rule 33
	'-'            reduce using rule 33
	'/'            reduce using rule 33
	length         reduce using rule 33
	push           reduce using rule 33
	'++'           reduce using rule 33
	splitAt        reduce using rule 33
	duplicate      reduce using rule 33
	head           reduce using rule 33
	last           reduce using rule 33
	take           reduce using rule 33
	sum            reduce using rule 33
	takeRepeat     reduce using rule 33
	sumLists       reduce using rule 33
	fibSequence    reduce using rule 33
	%eof           reduce using rule 33


State 18

	Exp -> reverse . Exp                                (rule 12)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 65

State 19

	Exp -> length . Exp                                 (rule 9)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 64

State 20

	Exp -> push . int int Exp                           (rule 13)

	int            shift, and enter state 63


State 21

	Exp -> splitAt . Exp Exp                            (rule 20)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 62

State 22

	Exp -> duplicate . Exp                              (rule 22)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 61

State 23

	Exp -> head . Exp                                   (rule 14)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 60

State 24

	Exp -> last . Exp                                   (rule 15)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 59

State 25

	Exp -> take . Exp Exp                               (rule 16)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 58

State 26

	Exp -> sum . Exp                                    (rule 23)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 57

State 27

	Exp -> takeRepeat . Exp Exp                         (rule 18)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 56

State 28

	Exp -> sumLists . Exp                               (rule 17)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 55

State 29

	Exp -> fibSequence . Exp                            (rule 19)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 54

State 30

	Exp -> Exp . ';' Exp                                (rule 10)
	Exp -> Exp . '++' Exp                               (rule 24)
	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '<' Exp                                (rule 29)
	Exp -> Exp . '>' Exp                                (rule 30)
	Lam -> Exp . Exp                                    (rule 37)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'<'            shift, and enter state 39
	'>'            shift, and enter state 40
	'('            shift, and enter state 16
	var            shift, and enter state 17
	';'            shift, and enter state 41
	reverse        shift, and enter state 18
	'+'            shift, and enter state 42
	'*'            shift, and enter state 43
	'-'            shift, and enter state 44
	'/'            shift, and enter state 45
	length         shift, and enter state 19
	push           shift, and enter state 20
	'++'           shift, and enter state 46
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 53

State 31

	Sequence -> zipLines Lam . Exp Exp                  (rule 6)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 52

State 32

	Lam -> lam . '(' var ':' DataType ')' Exp           (rule 38)

	'('            shift, and enter state 51


State 33

	Sequence -> listsArith Lam . Exp                    (rule 8)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 50

State 34

	Sequence -> map Lam . Exp                           (rule 2)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 49

State 35

	Sequence -> if Exp . then Exp else Exp fi           (rule 3)
	Exp -> Exp . ';' Exp                                (rule 10)
	Exp -> Exp . '++' Exp                               (rule 24)
	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '<' Exp                                (rule 29)
	Exp -> Exp . '>' Exp                                (rule 30)

	'<'            shift, and enter state 39
	'>'            shift, and enter state 40
	';'            shift, and enter state 41
	then           shift, and enter state 48
	'+'            shift, and enter state 42
	'*'            shift, and enter state 43
	'-'            shift, and enter state 44
	'/'            shift, and enter state 45
	'++'           shift, and enter state 46


State 36

	Sequence -> let var . '=' Exp                       (rule 5)

	'='            shift, and enter state 47


State 37

	Sequence -> begin Exp . end                         (rule 1)
	Exp -> Exp . ';' Exp                                (rule 10)
	Exp -> Exp . '++' Exp                               (rule 24)
	Exp -> Exp . '+' Exp                                (rule 25)
	Exp -> Exp . '-' Exp                                (rule 26)
	Exp -> Exp . '*' Exp                                (rule 27)
	Exp -> Exp . '/' Exp                                (rule 28)
	Exp -> Exp . '<' Exp                                (rule 29)
	Exp -> Exp . '>' Exp                                (rule 30)

	end            shift, and enter state 38
	'<'            shift, and enter state 39
	'>'            shift, and enter state 40
	';'            shift, and enter state 41
	'+'            shift, and enter state 42
	'*'            shift, and enter state 43
	'-'            shift, and enter state 44
	'/'            shift, and enter state 45
	'++'           shift, and enter state 46


State 38

	Sequence -> begin Exp end .                         (rule 1)

	%eof           reduce using rule 1


State 39

	Exp -> Exp '<' . Exp                                (rule 29)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 87

State 40

	Exp -> Exp '>' . Exp                                (rule 30)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 86

State 41

	Exp -> Exp ';' . Exp                                (rule 10)

	int            shift, and enter state 11
	true           shift, and enter state 12
	false          shift, and enter state 13
	getStream      shift, and enter state 14
	print          shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	reverse        shift, and enter state 18
	length         shift, and enter state 19
	push           shift, and enter state 20
	splitAt        shift, and enter state 21
	duplicate      shift, and enter state 22
	head           shift, and enter state 23
	last           shift, and enter state 24
	take           shift, and enter state 25
	sum            shift, and enter state 26
	takeRepeat     shift, and enter state 27
	sumLists       shift, and enter state 28
	fibSequence    shift, and enter state 29

	Exp            goto state 85

State 42

	Exp -> Exp '+' . Exp                                (rule 25)
